// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/OpenClose Compact smoke-test 1`] = `
<div data-test-block="true">
  <div class="OpenClose_tag__hWZ8z">
    <button class="OpenClose_openClose__HxKKD OpenClose_openClose_compact__TuMGQ  "
            aria-expanded="false"
            type="button"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz OpenClose_icon__aE-c6 OpenClose_icon_active__ZZeR8 OpenClose_icon_closed__ubP4N OpenClose_icon_compact__Nl-IS"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
      <span class="OpenClose_title__tWrXz OpenClose_title_compact__8rSWt ">
        Er jeg pendler?
      </span>
    </button>
  </div>
</div>
`;

exports[`Tester/OpenClose CompactWithIconRight smoke-test 1`] = `
<div data-test-block="true">
  <div class="OpenClose_tag__hWZ8z">
    <button class="OpenClose_openClose__HxKKD OpenClose_openClose_compact__TuMGQ OpenClose_openClose_hasIconRight__3rsup "
            aria-expanded="false"
            type="button"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz OpenClose_icon__aE-c6 OpenClose_icon_active__ZZeR8 OpenClose_icon_closed__ubP4N OpenClose_icon_compact__Nl-IS"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
      <span class="OpenClose_title__tWrXz OpenClose_title_compact__8rSWt ">
        Er jeg pendler?
      </span>
    </button>
  </div>
</div>
`;

exports[`Tester/OpenClose CompactWithIconRightAndUnderline smoke-test 1`] = `
<div data-test-block="true">
  <div class="OpenClose_tag__hWZ8z">
    <button class="OpenClose_openClose__HxKKD OpenClose_openClose_compact__TuMGQ OpenClose_openClose_hasIconRight__3rsup "
            aria-expanded="false"
            type="button"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz OpenClose_icon__aE-c6 OpenClose_icon_active__ZZeR8 OpenClose_icon_closed__ubP4N OpenClose_icon_compact__Nl-IS"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
      <span class="OpenClose_title__tWrXz OpenClose_title_compact__8rSWt OpenClose_title_underline__WLqQJ">
        Er jeg pendler?
      </span>
    </button>
  </div>
</div>
`;

exports[`Tester/OpenClose CompactWithUnderline smoke-test 1`] = `
<div data-test-block="true">
  <div class="OpenClose_tag__hWZ8z">
    <button class="OpenClose_openClose__HxKKD OpenClose_openClose_compact__TuMGQ  "
            aria-expanded="false"
            type="button"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz OpenClose_icon__aE-c6 OpenClose_icon_active__ZZeR8 OpenClose_icon_closed__ubP4N OpenClose_icon_compact__Nl-IS"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
      <span class="OpenClose_title__tWrXz OpenClose_title_compact__8rSWt OpenClose_title_underline__WLqQJ">
        Er jeg pendler?
      </span>
    </button>
  </div>
</div>
`;

exports[`Tester/OpenClose Defaults play-test 1`] = `
<div data-test-block="true">
  <div class="OpenClose_tag__hWZ8z">
    <button class="OpenClose_openClose__HxKKD   "
            aria-expanded="false"
            type="button"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o OpenClose_icon__aE-c6 OpenClose_icon_active__ZZeR8 OpenClose_icon_closed__ubP4N "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
      <span class="OpenClose_title__tWrXz  ">
        Er jeg pendler?
      </span>
    </button>
  </div>
</div>
`;

exports[`Tester/OpenClose IconRightContent smoke-test 1`] = `
<div data-test-block="true">
  <div class="OpenClose_tag__hWZ8z">
    <button class="OpenClose_openClose__HxKKD  OpenClose_openClose_hasIconRight__3rsup "
            aria-expanded="true"
            type="button"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o OpenClose_icon__aE-c6 OpenClose_icon_active__ZZeR8 OpenClose_icon_open__3ueiR "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
      <span class="OpenClose_title__tWrXz  ">
        Er jeg pendler?
      </span>
    </button>
  </div>
  <div class="OpenClose_content__SuoX1  OpenClose_content_hasIconRight__YULhj">
    En pendler er en lønnstaker som overnatter borte på grunn av jobb. Hvis du er pendler kan du ha krav på fradrag for dine merkostnader til kost, losji og reiser til og fra pendlerboligen.
  </div>
</div>
`;

exports[`Tester/OpenClose InContext smoke-test 1`] = `
<div data-test-block="true">
  <div>
    I Skatteetaten definerer vi om du er pendler ut fra at en rekke vilkår må være oppfylt. For å få fradragene må du blant annet være lønnstaker og overnatte borte på grunn av jobb. Pendlerfradrag gis kun for reiseutgifter som du selv (pendleren) har for å besøke hjemmet ditt, ikke for familie som kommer på besøk til din pendlerbolig.
  </div>
  <div class="OpenClose_tag__hWZ8z">
    <button class="OpenClose_openClose__HxKKD   "
            aria-expanded="false"
            type="button"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o OpenClose_icon__aE-c6 OpenClose_icon_active__ZZeR8 OpenClose_icon_closed__ubP4N "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
      <span class="OpenClose_title__tWrXz  ">
        Er jeg pendler?
      </span>
    </button>
  </div>
</div>
`;

exports[`Tester/OpenClose IsExpanded play-test 1`] = `
<div data-test-block="true">
  <div class="OpenClose_tag__hWZ8z">
    <button class="OpenClose_openClose__HxKKD   "
            aria-expanded="true"
            type="button"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o OpenClose_icon__aE-c6 OpenClose_icon_active__ZZeR8 OpenClose_icon_open__3ueiR "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
      <span class="OpenClose_title__tWrXz  ">
        Er jeg pendler?
      </span>
    </button>
  </div>
  <div class="OpenClose_content__SuoX1  ">
    En pendler er en lønnstaker som overnatter borte på grunn av jobb. Hvis du er pendler kan du ha krav på fradrag for dine merkostnader til kost, losji og reiser til og fra pendlerboligen.
  </div>
</div>
`;

exports[`Tester/OpenClose WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class="OpenClose_tag__hWZ8z">
    <button id="htmlId"
            class="OpenClose_openClose__HxKKD   dummyClassname"
            lang="nb"
            data-testid="123ID"
            aria-expanded="false"
            type="button"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o OpenClose_icon__aE-c6 OpenClose_icon_active__ZZeR8 OpenClose_icon_closed__ubP4N "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
      <span class="OpenClose_title__tWrXz  ">
        Er jeg pendler?
      </span>
    </button>
  </div>
</div>
`;

exports[`Tester/OpenClose WithChangingTitle play-test 1`] = `
<div data-test-block="true">
  <div class="OpenClose_tag__hWZ8z">
    <button class="OpenClose_openClose__HxKKD   "
            aria-expanded="true"
            type="button"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o OpenClose_icon__aE-c6 OpenClose_icon_active__ZZeR8 OpenClose_icon_open__3ueiR "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
      <span class="OpenClose_title__tWrXz  ">
        OpenClose har blitt åpnet
      </span>
    </button>
  </div>
  <div class="OpenClose_content__SuoX1  ">
    En pendler er en lønnstaker som overnatter borte på grunn av jobb. Hvis du er pendler kan du ha krav på fradrag for dine merkostnader til kost, losji og reiser til og fra pendlerboligen.
  </div>
</div>
`;

exports[`Tester/OpenClose WithIconRight smoke-test 1`] = `
<div data-test-block="true">
  <div class="OpenClose_tag__hWZ8z">
    <button class="OpenClose_openClose__HxKKD  OpenClose_openClose_hasIconRight__3rsup "
            aria-expanded="false"
            type="button"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o OpenClose_icon__aE-c6 OpenClose_icon_active__ZZeR8 OpenClose_icon_closed__ubP4N "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
      <span class="OpenClose_title__tWrXz  ">
        Er jeg pendler?
      </span>
    </button>
  </div>
</div>
`;

exports[`Tester/OpenClose WithIconRightAndUnderline smoke-test 1`] = `
<div data-test-block="true">
  <div class="OpenClose_tag__hWZ8z">
    <button class="OpenClose_openClose__HxKKD  OpenClose_openClose_hasIconRight__3rsup "
            aria-expanded="false"
            type="button"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o OpenClose_icon__aE-c6 OpenClose_icon_active__ZZeR8 OpenClose_icon_closed__ubP4N "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
      <span class="OpenClose_title__tWrXz  OpenClose_title_underline__WLqQJ">
        Er jeg pendler?
      </span>
    </button>
  </div>
</div>
`;

exports[`Tester/OpenClose WithIsOnClickOnlyFiredOnOpen play-test 1`] = `
<div data-test-block="true">
  <div class="OpenClose_tag__hWZ8z">
    <button class="OpenClose_openClose__HxKKD   "
            aria-expanded="false"
            type="button"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o OpenClose_icon__aE-c6 OpenClose_icon_active__ZZeR8 OpenClose_icon_closed__ubP4N "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
      <span class="OpenClose_title__tWrXz  ">
        Er jeg pendler?
      </span>
    </button>
  </div>
</div>
`;

exports[`Tester/OpenClose WithLongTitle smoke-test 1`] = `
<div data-test-block="true">
  <div class="OpenClose_tag__hWZ8z">
    <button class="OpenClose_openClose__HxKKD   "
            aria-expanded="false"
            type="button"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o OpenClose_icon__aE-c6 OpenClose_icon_active__ZZeR8 OpenClose_icon_closed__ubP4N "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
      <span class="OpenClose_title__tWrXz  ">
        Denneknappenharenveldiglangtekst.Dentekstengåroverflerelinjerfordidenersålangogdablirikonetriktigplassert.Fordetkanjoskjeattittelengåroverflerelinjerhvisdeterenveldiglitenskjerm.Sådamåvisjekkeatdetikkeserrartut.
      </span>
    </button>
  </div>
</div>
`;

exports[`Tester/OpenClose WithOnClick play-test 1`] = `
<div data-test-block="true">
  <div class="OpenClose_tag__hWZ8z">
    <button class="OpenClose_openClose__HxKKD   "
            aria-expanded="false"
            type="button"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o OpenClose_icon__aE-c6 OpenClose_icon_active__ZZeR8 OpenClose_icon_closed__ubP4N "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
      <span class="OpenClose_title__tWrXz  ">
        Er jeg pendler?
      </span>
    </button>
  </div>
</div>
`;

exports[`Tester/OpenClose WithRef play-test 1`] = `
<div data-test-block="true">
  <div class="OpenClose_tag__hWZ8z">
    <button class="OpenClose_openClose__HxKKD   "
            aria-expanded="false"
            type="button"
            id="dummyIdForwardedFromRef"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o OpenClose_icon__aE-c6 OpenClose_icon_active__ZZeR8 OpenClose_icon_closed__ubP4N "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
      <span class="OpenClose_title__tWrXz  ">
        Er jeg pendler?
      </span>
    </button>
  </div>
</div>
`;

exports[`Tester/OpenClose WithTitleAs play-test 1`] = `
<div data-test-block="true">
  <h1 class="OpenClose_tag__hWZ8z">
    <button class="OpenClose_openClose__HxKKD   "
            aria-expanded="false"
            type="button"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o OpenClose_icon__aE-c6 OpenClose_icon_active__ZZeR8 OpenClose_icon_closed__ubP4N "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
      <span class="OpenClose_title__tWrXz  ">
        Heading h1
      </span>
    </button>
  </h1>
  <h2 class="OpenClose_tag__hWZ8z">
    <button class="OpenClose_openClose__HxKKD   "
            aria-expanded="false"
            type="button"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o OpenClose_icon__aE-c6 OpenClose_icon_active__ZZeR8 OpenClose_icon_closed__ubP4N "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
      <span class="OpenClose_title__tWrXz  ">
        Heading h2
      </span>
    </button>
  </h2>
  <h3 class="OpenClose_tag__hWZ8z">
    <button class="OpenClose_openClose__HxKKD   "
            aria-expanded="false"
            type="button"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o OpenClose_icon__aE-c6 OpenClose_icon_active__ZZeR8 OpenClose_icon_closed__ubP4N "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
      <span class="OpenClose_title__tWrXz  ">
        Heading h3
      </span>
    </button>
  </h3>
  <h4 class="OpenClose_tag__hWZ8z">
    <button class="OpenClose_openClose__HxKKD   "
            aria-expanded="false"
            type="button"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o OpenClose_icon__aE-c6 OpenClose_icon_active__ZZeR8 OpenClose_icon_closed__ubP4N "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
      <span class="OpenClose_title__tWrXz  ">
        Heading h4
      </span>
    </button>
  </h4>
  <h5 class="OpenClose_tag__hWZ8z">
    <button class="OpenClose_openClose__HxKKD   "
            aria-expanded="false"
            type="button"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o OpenClose_icon__aE-c6 OpenClose_icon_active__ZZeR8 OpenClose_icon_closed__ubP4N "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
      <span class="OpenClose_title__tWrXz  ">
        Heading h5
      </span>
    </button>
  </h5>
  <h6 class="OpenClose_tag__hWZ8z">
    <button class="OpenClose_openClose__HxKKD   "
            aria-expanded="false"
            type="button"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o OpenClose_icon__aE-c6 OpenClose_icon_active__ZZeR8 OpenClose_icon_closed__ubP4N "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
      <span class="OpenClose_title__tWrXz  ">
        Heading h6
      </span>
    </button>
  </h6>
</div>
`;

exports[`Tester/OpenClose WithUnderline smoke-test 1`] = `
<div data-test-block="true">
  <div class="OpenClose_tag__hWZ8z">
    <button class="OpenClose_openClose__HxKKD   "
            aria-expanded="false"
            type="button"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o OpenClose_icon__aE-c6 OpenClose_icon_active__ZZeR8 OpenClose_icon_closed__ubP4N "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="m18.1 6.98-6.1 6.1-6.1-6.1L4 8.88l8 8 8-8-1.9-1.9Z">
        </path>
      </svg>
      <span class="OpenClose_title__tWrXz  OpenClose_title_underline__WLqQJ">
        Er jeg pendler?
      </span>
    </button>
  </div>
</div>
`;
